test/conformance/chainsaw/webhooks/dyn-op-validate-and-mutate/01-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: policy
spec:
  timeouts: {}
  try:
  - apply:
      file: policy-01.yaml
  - assert:
      file: policy-assert1.yaml
