test/conformance/chainsaw/webhooks/dyn-op-validate-and-mutate/03-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: policy
spec:
  timeouts: {}
  try:
  - apply:
      file: policy-03.yaml
  - assert:
      file: policy-assert2.yaml
