test/conformance/chainsaw/webhooks/dyn-op-validate-and-mutate/04-webhooks.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: webhooks
spec:
  timeouts: {}
  try:
  - assert:
      file: webhooks-04.yaml
