test/conformance/chainsaw/webhooks/dyn-op-validate-and-mutate/chainsaw-test.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: dyn-op-validate-and-mutate
spec:
  concurrent: false
  namespace: default
  steps:
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy-01.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: require-labels
  - name: step-02
    try:
    - assert:
        file: webhooks-02.yaml
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy-03.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: add-apparmor-annotations
  - name: step-04
    try:
    - assert:
        file: webhooks-04.yaml
